fixed sidebar, ficed non visible categories

--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -90,3 +90,7 @@
         }
     }
 }
+
+.offcanvas.offcanvas-start {
+    overflow: hidden scroll;
+}
